[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/ActionSelector/ButtonCategoryContainer.gd" type="Script" id=2]

[node name="Control" type="Control"]
show_behind_parent = true
margin_right = 50.0
margin_bottom = 60.0
rect_min_size = Vector2( 55, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ButtonCategoryContainer" type="PanelContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -27.5
margin_right = 27.5
margin_bottom = 60.0
mouse_filter = 2
size_flags_horizontal = 12
size_flags_vertical = 12
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonCategoryContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 54.0
margin_bottom = 59.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="PanelContainer" parent="ButtonCategoryContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 53.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="ButtonContainer" type="GridContainer" parent="ButtonCategoryContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 11.0
margin_right = 53.0
margin_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 48, 47 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 3

[node name="ScrollContainer" type="ScrollContainer" parent="ButtonCategoryContainer/VBoxContainer"]
visible = false
margin_top = 59.0
margin_right = 53.0
margin_bottom = 59.0
rect_min_size = Vector2( 48, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="Panel2" type="Panel" parent="ButtonCategoryContainer/VBoxContainer/ScrollContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionDataPanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ActionDataContainer" type="VBoxContainer" parent="ActionDataPanelContainer"]
unique_name_in_owner = true
margin_left = 1.0
margin_top = 1.0
margin_right = 9.0
margin_bottom = 9.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.5
margin_right = 30.5
margin_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = true
text = "Category"
align = 1
